# cppdiag

./: .gitignore  CMakeLists.txt  README.md  configure
cppdiag/: cppdiag.cpp  cppdiag.hpp  format.cpp  internals.cpp  internals.hpp
src/cppdiag/: cppdiag.cpp  cppdiag.hpp  format.cpp  internals.cpp  internals.hpp
tests/: CMakeLists.txt  interface.cpp  internals.cpp
